== CTAN release 2011.06.22 (#579) ==

2011-06-21 (#578)
- Added licence statement for Lao

2011-06-20 (#572)
- change language tag for Pinyin (zh-latn -> zh-latn-pinyin) due to new tag
  http://www.iana.org/assignments/lang-subtags-templates/pinyin (2008-10-17)

2011-06-20 (#566)
- fetch the latest version of Hungarian patterns from
  https://github.com/nagybence/huhyphn/

== CTAN release 2011.06.11 (#555) ==

2011-06-11 (#555)
- downcase "Hyphenation Patterns"

2011-06-09 (#553)
- add duplicated patterns with apostrophes for XeTeX
- fix tlpsrc generator for serbian

2011-06-09 (#549)
- support multiple hyphenation/patterns files.

2011-06-08 (#547)
- duplicate patterns with apostrophes in plan text files
- fix a bug in conversion of greek patterns into plain text files (no apostrophe replacement)

2011-06-08 (#545, #546)
- restore two version of plain text patterns for Serbian
  and load 'sh' patterns by default also for Cyrillic script

2011-06-08 (#544)
- a section in documentation about using hyphenation patterns in TeX

2011-06-08 (#543)
- temporary remove Greek patterns for 8-bit engines (will be added later)

2011-06-07 (#542)
- add LPPL licence to Uppersorbian patterns

2011-06-07 (#538)
- add LPPL licence to Welsh patterns

2011-06-06 (#528, #529)
- rename 8bit patterns: phyph-<lang>.tex -> hyph-<lang>.<enc>.tex

2011-06-06 (#527)
- add LPPL licence to Croatian patterns (and update author's email address)

2011-06-02 (#525)
- new version of German hyphenation patterns

2011-06-01 (#523, #524)
- load patterns for Latin and Cyrillic scripts for Serbian simultaneously

2011-01-19 (#515)
- merge exhyph-ru.tex and exhyph-uk.tex with dash-related patterns into main file
  (we might split them again if we decide to support all different encodings)

2011-01-19 (#514)
- add ASCII Greek and Coptic patterns for 8-bit engines into repository

== CTAN release 2011.01.13 ==

2011-01-11 (#512)
- remove the hack for OT1 encoding support for French and Danish patterns
