@@ -1,11 +1,17 @@
 % hyph-tr.tex
 %
-% File auto-generated from generate_patterns_tr.rb that is part of hyph-utf8
+% Turkish hyphenation patterns
 %
-% Licence:
-% - Free enough for Debian & TeX Live or any other distributor
-% - If you are reading this and have some suggestion about what to put here, please advise
-% - I (Mojca) would prefer to say 'public domain', but don't know what it means for the original authors
+% This file is auto-generated from source/generic/hyph-utf8/languages/tr/generate_patterns_tr.rb that is part of hyph-utf8.
+% Please don't modify this file; modify the generating script instead.
+%
+% Copyright (C) 1987 Pierre A. MacKay
+%               2008, 2011 TUG
+%
+% This program can redistributed and/or modified under the terms
+% of the LaTeX Project Public License Distributed from CTAN
+% archives in directory macros/latex/base/lppl.txt; either
+% version 1 of the License, or (at your option) any later version.
 %
 % Credits:
 % - algorithm developed by P. A. MacKay for the Ottoman Texts Project in 1987
@@ -13,15 +19,19 @@
 % - initiative to improve Turkish patterns by S. Ekin Kocabas <kocabas at stanford.edu>
 % - script written by Mojca Miklavec <mojca.miklavec.lists at gmail.com> in June 2008
 %
-% Modifications:
-% - adapted for the use on modern UTF-8 TeX engines
-% - UTF-8 patterns are used
+% See also:
+% - http://www.ctan.org/tex-archive/language/turkish/hyphen/turk_hyf.c
+% - http://www.tug.org/TUGboat/Articles/tb09-1/tb20mackay.pdf
+%
+% Differences with Ottoman patterns:
+% - adapted for the use on modern TeX engines, using UTF-8 charactes
 % - only letters for Modern Turkish + âîû (the first one often needed, the other two don't hurt)
-% - if needed, support for Ottoman Turkish might be provided separately under 'ota' (not 'tr')
+% - (if needed, support for Ottoman Turkish might be provided separately under language code 'ota')
 %
-% Notes:
-% - you need to use loadhyph-tr.tex, please do not try to put \catcode-s & \lccode-s here
-%
+% Changes:
+% - 2008-06-25/27/28 - create this file by adapting Ottoman rules for modern Turkish
+% - 2011-08-10 - add LPPL licence with permission of Pierre A. MacKay
+% 
 \patterns{
 % prohibit hyphen before vowels, allow after
 2a1
