@@ -1,3 +1,6 @@
+2011-08-10 (#583)
+- Added LPPL licence to Turkish patterns
+
 == CTAN release 2011.06.22 (#579) ==
 
 2011-06-21 (#578)
